--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,85 @@
-#container {
+body {
+	font-family: 'Nunito', sans-serif;
+	background-color: #000;
+}
+
+h1 {
+	font-family: 'Julee', cursive;
+	font-size: 50px;
+	color: #fff;
+}
+
+h2 {
+	font-family: 'Julee', cursive;
+    color: #fff;
+    font-style: bold;
+    text-align: center;
+}
+
+
+p {
+	color: #fff;
+}
+
+#page {
     width: 960px;
 	margin: 0 auto;
-	background-color: 000000;
+}
+
+#instructions {
+	float: left;
+	width: 630px;
+	margin-left: 100px;
+	margin-bottom: 20px;
+	padding: 20px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #5627ad;
+	border-radius: 25px;
+	background-color: #43124f;
+	text-align: center;
+}
+
+#random-number {
+	width: 250px;
+	float: left;
+	margin: 20px;
+	margin-left: 0px;
+	background-color: #5627ad;
+	padding: 10px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #43124f;
+	border-radius: 25px;
+	text-align: center;
+}
+
+#userTotal {
+	width: 250px;
+	float: left;
+	margin: 20px;
+	background-color: #5627ad;
+	padding: 10px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #43124f;
+	border-radius: 25px;
+	text-align: center;
+}
+
+#counter {
+	width: 250px;
+	float: left;
+	margin: 20px;
+	background-color: #5627ad;
+	padding: 10px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #43124f;
+	border-radius: 25px;
+}
+
+#crystals {
+	float: left;
+	margin-left: 25px;
 }
