--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ h2 {
 	color: #FFFF00;
 }
 
-p.question {
+p, p.question {
 	font-family: 'Almendra', serif;
 	font-size: 25px;
     color: #fff;
@@ -44,7 +44,7 @@ button {
 }
 
 
-#start, #questions {
+#start, #questions, #end {
 	float: left;
 	width: 75%;
 	margin-top: 100px;
