--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
 	background-image: url("https://github.com/ericsteinman/TriviaGame/blob/master/assets/images/GameBackground.jpg?raw=true");
 	background-size: 110%;
 	background-attachment: fixed;
+	background-repeat: no-repeat;
 }
 
 h1 {
@@ -46,11 +47,9 @@ button {
 
 
 #start, #questions, #end {
-	float: left;
 	width: 75%;
-	margin-top: 100px;
-	margin-left: 80px;
-	margin-bottom: 20px;
+	margin: 0 auto;
+	margin-top: 60px;
 	padding: 20px;
 	border-style: solid;
 	border-width: 5px;
